--- a/mapas.html
+++ b/mapas.html
@@ -17,6 +17,9 @@
                 <li>
                     <a href="agentes.html">Agentes</a>
                 </li>
+                <li>
+                    <a href="clicker.html">Entrenamiento</a>
+                </li>
             </ul>
         </nav>
     </div>
