--- a/agentes.html
+++ b/agentes.html
@@ -9,8 +9,9 @@
 <body>
   <nav>
     <ul>
-      <li><a href="inicio.html">Inicio</a></li>
+      <li><a href="index.html">Inicio</a></li>
       <li><a href="mapas.html">Mapas</a></li>
+      <li><a href="clicker.html">Entrenamiento</a></li>
     </ul>
   </nav>
 
