--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <ul>
                 <li><a href="mapas.html">Mapas</a></li>
                 <li><a href="agentes.html">Agentes</a></li>
+                <li><a href="clicker.html">Entrenamiento</a></li>
             </ul>
         </nav>
 
@@ -66,11 +67,11 @@
     <div class="trailer-content" style="display: flex; justify-content: center;">
         <iframe width="560" height="315" src="media/videos/ValorantTrailer.mp4" 
                 title="Tráiler de Valorant" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
         </iframe>
     </div>
-    <a href="https://playvalorant.com/es-es/platform-selection/" target="_blank" 
+    <a href="clicker.html" 
        style="display: inline-block; margin-top: 15px; text-decoration: none; background: #ff4654; padding: 10px 20px; border-radius: 5px; color: #111823; font-weight: bold;">
         Accede al juego
     </a>
