--- a/mapas.html
+++ b/mapas.html
@@ -12,7 +12,7 @@
 
             <ul class="menu-opt">
                 <li>
-                    <a href="inicio.html">Inicio</a>
+                    <a href="index.html">Inicio</a>
                 </li>
                 <li>
                     <a href="agentes.html">Agentes</a>
